# Genesis

./: README.md  genesis_main.py  pyproject.toml
Source/Platform/Engine/: GenesisEngine.py
Source/Platform/Engine/DataLayer/: GenesisVectorIndex.py  GenesisVectorStore.py
Source/Platform/Engine/Infrastructure/: GenesisLogger.py
Source/Platform/Engine/Settings/: GenesisSettings.py
Source/Platform/Server/: GenesisMain.py
Source/Platform/Server/DataLayer/: GenesisVectorIndex.py  GenesisVectorStore.py
Source/Platform/Server/Infrastructure/: GenesisLogger.py  GenesisSynchronization.py
Source/Server/: genesis_main.py  pyproject.toml
Source/Server/service_data_layer/: genesis_vector_index.py  genesis_vector_store.py
Source/Server/service_infra/: genesis_context.py  genesis_logger.py
service_data_layer/: chatty_pinecone_index.py  chatty_pinecone_store.py  genesis_pinecone_index.py  genesis_pinecone_store.py
service_infra/: chatty_constants.py  chatty_context.py  chatty_environment.py  chatty_logger.py  genesis_constants.py  genesis_context.py  genesis_environment.py  genesis_logger.py  genesis_synchronization.py
