[tool.poetry]
name = "Genesis"
version = "0.1.0"
description = ""
authors = ["Ofir Yakovian <ofir.yk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
pinecone-client = "^2.2.0"
tqdm = "^4.62.3"
langchain = "^0.0.180"
openai = "^0.27.7"
tiktoken = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
